# cmake_demo

./: CMakeLists.txt  README.md
demo1/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.h  main.cpp
demo3/: CMakeLists.txt  main.cpp
demo3/math/: CMakeLists.txt  MathFunctions.cpp
demo4/: CMakeLists.txt  config.h.in  main.cpp
demo5/: CMakeLists.txt  main.cpp
demo6/: CMakeLists.txt  config.h.in  main.cpp
demo7/: CMakeLists.txt  config.h.in  main.cpp
demo7/math/: CMakeLists.txt
demo8/: CMakeLists.txt  config.h.in  main.cpp
demo9/: CMakeLists.txt  HelloWorld.cpp  build.bat
